syntax = "proto3";
package flashlight.issue;
option go_package = "github.com/getlantern/flashlight/issue";

message Response {
}

message Request {
    enum ISSUE_TYPE {
        PAYMENT_FAIL = 0;
        CANNOT_LOGIN = 1;
        ALWAYS_SPINNING = 2;
        NO_ACCESS = 3;
        SLOW = 4;
        CANNOT_LINK_DEVICE = 5;
        CRASHES = 6;
        CHAT_NOT_WORKING = 7;
        DISCOVER_NOT_WORKING = 8;
        OTHER = 9;
    }
    
	ISSUE_TYPE type = 1;
    string country_code = 2;
    string app_version = 3;
    string subscription_level = 4;
    string platform = 5;
    string description = 6;
    string user_email = 7;
    string device_id = 8;
    string user_id = 9;
    string pro_token = 10;
    string device = 11;
    string model = 12;
    string os_version = 13;
    string language = 14;
    repeated Attachment attachments = 15;
    
    message Attachment {
        string type = 1;
        string name = 2;
        bytes content = 3;
    }
}