syntax = "proto3";
import "google/protobuf/struct.proto";
option go_package = "github.com/getlantern/flashlight/pro/client";

message Plan {
  string id = 1;
  string description = 2;
  bool bestValue = 3;
  int64 usdPrice = 4;
  map<string, int64> price = 5;
  map<string, int64> expectedMonthlyPrice = 6;
  string totalCostBilledOneTime = 7;
  string oneMonthCost = 8;
  string totalCost = 9;
  string formattedBonus = 10;
  string renewalText = 11;
}

message PlansResponse {
    repeated Plan plans = 1;
}

message PaymentProvider {
    string name = 1;
    map<string, string> data = 2;
}

message PaymentMethod {
    string method = 1;
    repeated PaymentProvider providers = 2;
}

message PaymentMethodsResponse {
    map<string, google.protobuf.ListValue> providers = 1; 
}

enum Provider {
    PROVIDER_UNSET = 0;
    STRIPE = 1;
    FREEKASSA = 2;
}

message PurchaseRequest {
    Provider provider = 1;
    string email = 2;
    string plan = 3;
    string cardNumber = 4;
    string expDate = 5;
    string cvc = 6;
    string currency = 7;
    string deviceName = 8;
    string stripePublicKey = 9;
    string stripeEmail = 10;
    string stripeToken = 11;
    string token = 12;
    string resellerCode = 13;
}

message PurchaseResponse {
    bool success = 1;
}
